Ensure keywords show on mobile in the search dropdown
Fixes DD 71427 432

--- a/app/design/frontend/Travers/default/styles/blocks/_algolia.scss
+++ b/app/design/frontend/Travers/default/styles/blocks/_algolia.scss
@@ -37,6 +37,10 @@
         width: 100%;
     }
 
+    .aa-dataset-suggestions {
+        display: block !important;
+    }
+
     @include min-screen(869px) { // Algolia's breakpoint where it turns into dual menu
         .aa-dropdown-menu {
             width: 90% !important;
